# shipfreight

./: README.md  pyproject.toml
.github/workflows/: ci.yml
shipfreight/: hooks.py  modules.txt
shipfreight/ship_freight/doctype/agence_ship/: agence_ship.js  agence_ship.json  agence_ship.py  test_agence_ship.py
shipfreight/ship_freight/doctype/certification/: certification.json  certification.py
shipfreight/ship_freight/doctype/certifications_ship/: certifications_ship.json  certifications_ship.py
shipfreight/ship_freight/doctype/classe_ship/: classe_ship.js  classe_ship.json  classe_ship.py  test_classe_ship.py
shipfreight/ship_freight/doctype/client_ship/: client_ship.js  client_ship.json  client_ship.py  test_client_ship.py
shipfreight/ship_freight/doctype/destination_ship/: destination_ship.js  destination_ship.json  destination_ship.py  test_destination_ship.py
shipfreight/ship_freight/doctype/embarquement/: embarquement.js  embarquement.json  embarquement.py  test_embarquement.py
shipfreight/ship_freight/doctype/equipage_ship/: equipage_ship.js  equipage_ship.json  equipage_ship.py  test_equipage_ship.py
shipfreight/ship_freight/doctype/equipements_ship/: equipements_ship.json  equipements_ship.py
shipfreight/ship_freight/doctype/fournisseurs/: fournisseurs.js  fournisseurs.json  fournisseurs.py  test_fournisseurs.py
shipfreight/ship_freight/doctype/horaire_transport_ship/: horaire_transport_ship.js  horaire_transport_ship.json  horaire_transport_ship.py  test_horaire_transport_ship.py
shipfreight/ship_freight/doctype/societe/: societe.js  (+3 more)
(+57 files in other folders)
